--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,15 @@ body {
     margin: 0;
     font-family: Tahoma;
     font-size: 16px;
-  }
-  
-  h1, p {
+}
+
+h1,
+p {
     margin: 1em auto;
     text-align: center;
-  }
+}
+
+label {
+    display: block;
+    margin: 0.5rem 0;
+}
